--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=calinify
 
 # local dev ??
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/calinify?serverTimezone=UTC
 spring.datasource.username=${LOCAL_DATABASE_USERNAME}
 spring.datasource.password=${LOCAL_DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
