--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,9 @@ spring:
         show_sql: true
         format_sql: true
 
+jwt:
+  secret: ${JWT_SECRET_KEY}
+
 #  security:
 #    oauth2:
 #      resourceserver:
@@ -27,3 +30,4 @@ springdoc:
     path: /v3/api-docs
   swagger-ui:
     path: /swagger-ui.html
+
