--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: calinify
 
   datasource:
-    url: jdbc:mysql://localhost:3306/calinify?serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/${LOCAL_DATABASE_TABLE_NAME}?serverTimezone=UTC
     username: ${LOCAL_DATABASE_USERNAME}
     password: ${LOCAL_DATABASE_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
