--- a/.github/workflows/aws-dev.yml
+++ b/.github/workflows/aws-dev.yml
@@ -66,12 +66,12 @@ jobs:
           aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin ${{ steps.login-ecr.outputs.registry }}
 
           # Pull the Docker image
-          docker pull ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+          sudo docker pull ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
 
           # Stop and remove any existing container
-          docker stop core-backend-dev || true
-          docker rm core-backend-dev || true
+          sudo docker stop core-backend-dev || true
+          sudo docker rm core-backend-dev || true
 
           # Run the new Docker container
-          docker run -d --name core-backend-dev --env-file /home/{{ secrets.CALINIFY_EC2_USER }}/.env -p 8080:8080 ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+          sudo docker run -d --name core-backend-dev --env-file /home/${{ secrets.CALINIFY_EC2_USER }}/.env -p 8080:8080 ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
         EOF
