fix : fixed aws-dev.yml

--- a/.github/workflows/aws-dev.yml
+++ b/.github/workflows/aws-dev.yml
@@ -68,9 +68,11 @@ jobs:
           # Pull the Docker image
           sudo docker pull ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
 
-          # Stop and remove any existing container
-          sudo docker stop core-backend-dev || true
-          sudo docker rm core-backend-dev || true
+          if sudo docker ps -a --format '{{.Names}}' | grep -q '^core-backend-dev$'; then
+            # Stop and remove the existing container
+            sudo docker stop core-backend-dev
+            sudo docker rm core-backend-dev
+          fi
 
           # Run the new Docker container
           sudo docker run -d --name core-backend-dev --env-file /home/${{ secrets.CALINIFY_EC2_USER }}/.env -p 8080:8080 ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
