feat : yml 파일 수정 및 환경변수 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,3 +30,7 @@ springdoc:
     path: /v3/api-docs
   swagger-ui:
     path: /swagger-ui.html
+
+connect-server:
+  ai-server:
+    base-url: ${AI_SERVER_URL}
