--- a/.github/workflows/aws-prod.yml
+++ b/.github/workflows/aws-prod.yml
@@ -1,4 +1,4 @@
-name: Deploy to Amazon ECR
+name: Prod - Deploy to Amazon ECR
 
 on:
   push:
@@ -56,41 +56,52 @@ jobs:
 
     
     - name: Deploy Docker image to EC2
-      run: |       
-        # SSH into EC2 and run Docker commands
+      run: |
+        # SSH into Bastion and setup for Private EC2 access
         ssh -o StrictHostKeyChecking=no ${{ env.BASTION_USER }}@${{ env.BASTION_HOST }} << 'EOF'
         
-          echo ${{ env.PRIVATE_MAIN_PEM }} > private_main_key.pem
-          
+          # Private EC2에 접근할 PEM 키 파일 생성
+          echo "${{ secrets.PRIVATE_MAIN_PEM }}" > private_main_key.pem
           chmod 600 private_main_key.pem
         
-          ssh -i private_main_key.pem ${{ env.PRIVATE_MAIN_USER }}@${{ env.PRIVATE_MAIN_HOST }} << 'INNER_EOF'
+          # 내부에서 사용할 env 파일 생성
+          cat << 'EOT' > .env
+          CALINIFY_DATABASE_HOST=${{ secrets.CALINIFY_PROD_RDS_HOST }}
+          CALINIFY_DATABASE_PASSWORD=${{ secrets.CALINIFY_PROD_RDS_PASSWORD }}
+          CALINIFY_DATABASE_PORT=${{ secrets.CALINIFY_PROD_RDS_PORT }}
+          CALINIFY_DATABASE_TABLE_NAME=${{ secrets.CALINIFY_PROD_RDS_TABLE_NAME }}
+          CALINIFY_DATABASE_USERNAME=${{ secrets.CALINIFY_PROD_RDS_USERNAME }}
+          JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}
+          AI_SERVER_URL=${{ secrets.PROD_AI_SERVER_URL }}
+          EOT
+        
+          # Private EC2에 env 파일과 키 파일 전송
+          scp -i private_main_key.pem -o StrictHostKeyChecking=no .env private_main_key.pem ${{ env.PRIVATE_MAIN_USER }}@${{ env.PRIVATE_MAIN_HOST }}:/home/${{ env.PRIVATE_MAIN_USER }}/
+        
+          rm -f .env
+        
+          # Private EC2에서 Docker 명령어 실행
+          ssh -i private_main_key.pem -o StrictHostKeyChecking=no ${{ env.PRIVATE_MAIN_USER }}@${{ env.PRIVATE_MAIN_HOST }} << 'INNER_EOF'
         
             # Login to ECR
             aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin ${{ steps.login-ecr.outputs.registry }}
-  
-            sudo docker login -u AWS -p $(aws ecr get-login-password --region ap-northeast-2) ${{ steps.login-ecr.outputs.registry }}
-  
+        
             # Pull the Docker image
             sudo docker pull ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
-  
-            # 중복된 docker 컨테이너, 이미지 삭제
+        
+            # 중복된 Docker 컨테이너 삭제
             if sudo docker ps -a --format '{{.Names}}' | grep -q '^core-backend-dev$'; then
-              # Stop and remove the existing container
               sudo docker stop core-backend-dev
               sudo docker rm core-backend-dev
             fi
         
-            # 내부에서 사용할 env 파일 생성
-            echo "CALINIFY_DATABASE_HOST=${{ secrets.CALINIFY_PROD_RDS_HOST }}" >> .env
-            echo "CALINIFY_DATABASE_PASSWORD=${{ secrets.CALINIFY_PROD_RDS_PASSWORD }}" >> .env
-            echo "CALINIFY_DATABASE_PORT=${{ secrets.CALINIFY_PROD_RDS_PORT }}" >> .env
-            echo "CALINIFY_DATABASE_TABLE_NAME=${{ secrets.CALINIFY_PROD_RDS_TABLE_NAME }}" >> .env
-            echo "CALINIFY_DATABASE_USERNAME=${{ secrets.CALINIFY_PROD_RDS_USERNAME }}" >> .env
-            echo "JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}" >> .env
-            echo "AI_SERVER_URL=${{ secrets.PROD_AI_SERVER_URL }}" >> .env
-  
             # Run the new Docker container
-            sudo docker run -d --name core-backend-dev --env-file /home/${{ env.EC2_USER }}/.env -p 8080:8080 ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+            sudo docker run -d --name core-backend-dev --env-file /home/${{ env.PRIVATE_MAIN_USER }}/.env -p 8080:8080 ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+            
+            rm -f /home/${{ env.PRIVATE_MAIN_USER }}/.env
+        
           INNER_EOF
+        
+          rm -f private_main_key.pem
+
         EOF
