--- a/.github/workflows/aws-prod.yml
+++ b/.github/workflows/aws-prod.yml
@@ -58,7 +58,7 @@ jobs:
     - name: Deploy Docker image to EC2
       run: |
         # SSH into Bastion and setup for Private EC2 access
-        ssh -o StrictHostKeyChecking=no ${{ env.BASTION_USER }}@${{ env.BASTION_HOST }} << 'EOF'
+        ssh -o StrictHostKeyChecking=no ${{ env.BASTION_USER }}@${{ env.BASTION_HOST }} << EOF
         
           # Private EC2에 접근할 PEM 키 파일 생성
           echo "${{ env.PRIVATE_MAIN_PEM }}" > private_main_key.pem
@@ -79,7 +79,7 @@ jobs:
           rm -f .env
         
           # Private EC2에서 Docker 명령어 실행
-          ssh -i private_main_key.pem -o StrictHostKeyChecking=no ${{ env.PRIVATE_MAIN_USER }}@${{ env.PRIVATE_MAIN_HOST }} << 'INNER_EOF'
+          ssh -i private_main_key.pem -o StrictHostKeyChecking=no ${{ env.PRIVATE_MAIN_USER }}@${{ env.PRIVATE_MAIN_HOST }} << INNER_EOF
         
             # Login to ECR
             aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin ${{ steps.login-ecr.outputs.registry }}
