--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -28,3 +28,5 @@ springdoc:
 connect-server:
   ai-server:
     base-url: ${AI_SERVER_URL}
+  transport-server:
+    base-url: ${TRANSPORT_SERVER_URL}
