--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,3 +38,5 @@ springdoc:
 connect-server:
   ai-server:
     base-url: "http://localhost:5050/"
+  transport-server:
+    base-url: "http://localhost:5051/"
